Added initial datamodel. Re-did some of the API to handlle attachments as multipart files. Some parts of the service logic is created but no party or kivra integration is yet implemented.
