# src/main/java/se/sundsvall/digitalregisteredletter/api/model/SupportInfo.java
@@ -1,0 +1,21 @@
+package se.sundsvall.digitalregisteredletter.api.model;
+
+import static io.swagger.v3.oas.annotations.media.Schema.RequiredMode.REQUIRED;
+
+import io.swagger.v3.oas.annotations.media.Schema;
+import jakarta.validation.constraints.Email;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.validation.constraints.NotNull;
+import se.sundsvall.digitalregisteredletter.support.Builder;
+
+@Builder
+public record SupportInfo(
+
+	@NotBlank @Schema(description = "Support text for the letter", example = "For support, please contact us at the information below.", requiredMode = REQUIRED) String supportText,
+
+	@NotBlank @Schema(description = "URL for contact", example = "https://example.com/support", requiredMode = REQUIRED) String contactInformationUrl,
+
+	@Schema(description = "Phone number for contact", example = "+46123456789", requiredMode = REQUIRED) String contactInformationPhoneNumber,
+
+	@Email @NotNull @Schema(description = "Email address for contact", example = "support@email.com", requiredMode = REQUIRED) String contactInformationEmail) {
+}
